--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tayoha/voter-blockchain#readme",
   "dependencies": {
+    "js-sha3": "^0.5.7",
     "web3": "^1.3.0"
   },
   "devDependencies": {
